<resources>
    <string name="general">Главная</string>
    <string name="feed">Лента</string>
    <string name="today">Сегодня</string>
    <string name="profile">Профиль</string>

    <string name="test">Тест</string>

    <string name="no_connection">Нет подключения</string>
    <string name="check_connection">Проверьте подключение к сети</string>
    <string name="possibly_domain_blocked">Возможно https://bnw.im заблокирован провайдером</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="send">Отправить</string>
    <string name="message">Сообщение</string>
    <string name="error">Ошибка</string>
    <string name="one_of_list">%1$d из %2$d</string>
    <string name="user_not_found">Пользователь не найден</string>
    <string name="message_not_found">Пост не найден</string>
    <string name="saved_empty_title">Пока пусто</string>
    <string name="copied_to_clipboard">Скопировано в буфер обмена</string>

    <!--new post-->
    <string name="create_post">Написать сообщение</string>
    <string name="whats_new">Что нового?</string>
    <string name="sending_confirmation">Вы действительно хотите отправить?</string>
    <string name="tags_hint">Теги, через запятую</string>
    <string name="clubs_hint">Клубы, через запятую</string>

    <!--profile-->
    <string name="registered">Зарегистрировался %1$s</string>
    <string name="messages_count">Сообщений</string>
    <string name="comments_count">Комментариев</string>
    <string name="log_in">Авторизация</string>
    <string name="log_out">Выйти</string>
    <string name="log_out_from_profile">Выйти из профиля</string>
    <string name="log_out_confirmation">Вы действительно хотите выйти?</string>
    <string name="retry">Повторить</string>
    <string name="saved_messages">Сохраненные сообщения</string>
    <string name="saved_replies">Сохраненные комментарии</string>

    <!--settings-->
    <string name="settings">Настройки</string>
    <string name="behavior">Поведение</string>
    <string name="appearance">Внешний вид</string>
    <string name="language">Язык</string>
    <string name="choose_language">Выбрать язык</string>
    <string name="theme">Тема</string>
    <string name="light_theme">Светлая</string>
    <string name="dark_theme">Тёмная</string>
    <string name="choose_theme">Выбрать тему</string>
    <string name="system_default">По умолчанию</string>
    <string name="anonymity">Анонимность по умолчанию</string>
    <string name="english">English</string>
    <string name="russian">Русский</string>
    <string name="scroll_to_replies">Скроллить к комментариям</string>
    <string name="transition_animations">Анимация переключения экранов</string>
    <string name="default_tab">Открывать при старте</string>
    <string name="save_post_draft">Сохранять черновик поста</string>

    <!--auth-->
    <string name="user_name">Имя</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="auth_failed">Неверный логин или пароль</string>

    <!--saved messages-->
    <string name="saved_empty_messages">Сохраненные сообщения будут здесь</string>
    <string name="remove_saved_message_confirm">Вы уверены что хотите удалить сообщение из локального хранилища?</string>

    <!--saved replies-->
    <string name="saved_empty_replies">Сохраненные комментарии будут здесь</string>
    <string name="remove_saved_reply_confirm">Вы уверены что хотите удалить комментарий из локального хранилища?</string>

    <!--donate-->
    <string name="donate">Помочь проекту</string>

    <plurals name="minutes">
        <item quantity="zero">%1$d минут назад</item>
        <item quantity="one">%1$d минуту назад</item>
        <item quantity="two">%1$d минуты назад</item>
        <item quantity="few">%1$d минуты назад</item>
        <item quantity="many">%1$d минут назад</item>
        <item quantity="other">%1$d минут назад</item>
    </plurals>

    <plurals name="hours">
        <item quantity="zero">%1$d часов назад</item>
        <item quantity="one">%1$d час назад</item>
        <item quantity="two">%1$d часа назад</item>
        <item quantity="few">%1$d часа назад</item>
        <item quantity="many">%1$d часов назад</item>
        <item quantity="other">%1$d часов назад</item>
    </plurals>

    <plurals name="days">
        <item quantity="zero">%1$d дней назад</item>
        <item quantity="one">%1$d день назад</item>
        <item quantity="two">%1$d дня назад</item>
        <item quantity="few">%1$d дня назад</item>
        <item quantity="many">%1$d дней назад</item>
        <item quantity="other">%1$d дней назад</item>
    </plurals>
</resources>
