<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:text="@string/retry"
            android:visibility="gone"
            app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="bottom"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/log_in"
            android:visibility="gone"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="bottom"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/log_out"
            android:visibility="gone"
            app:cornerRadius="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:visibility="gone">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="user_name" />
            </com.google.android.material.appbar.AppBarLayout>

            <include
                android:id="@+id/details"
                layout="@layout/include_profile_details" />
        </LinearLayout>
    </FrameLayout>
</ScrollView>
