<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/barColor"
        android:theme="@style/AppTheme">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back"
            tools:title="@string/settings" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/loading_bar"
                layout="@layout/include_loading"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/behavior"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    tools:text="Поведение" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/anonymity"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    tools:text="@string/anonymity" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/scrollToReplies"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    tools:text="@string/scroll_to_replies" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/appearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    tools:text="Внешний вид" />

                <include
                    android:id="@+id/theme"
                    layout="@layout/include_setting_item" />

                <include
                    android:id="@+id/language"
                    layout="@layout/include_setting_item" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/transitionAnimations"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    tools:text="@string/scroll_to_replies" />
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</LinearLayout>

